# p2108-python

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  GitHubRepoPublicReleaseApproval.md  README.md  pyproject.toml  tox.ini
.github/workflows/: buildwheels.yml  cff-validator.yml  pytest.yml  release.yml  tox.yml
src/ITS/ITU/PSeries/P2108/: p2108.py  proplib_loader.py
src/ITS/PropLibTemplate/: __init__.py  proplib_loader.py  proplib_template.py
tests/: test_p2108.py  test_proplib_template.py  test_utils.py
